public/stylesheets/style.css
body {
  padding: 50px;
  font-family: 'Titillium Web', sans-serif;;
  background-color: rgb(242, 235, 231);
  font-size: 14px
  color: rgb(34,23,18);
}

a {
  color: #00B7FF;
}

#website {
	font-family: 'Montserrat Subrayada', Helvetica, sans-serif;
	font-size: 40px;
	background-color: rgb(82,126,144);
	border: 5px solid #5f4236;
}
#map {
  height: 560px;
  /*width: 800px;*/
  vertical-align: left;
}

#sidebar {
  overflow: scroll;
  overflow-x: hidden;
  height: 550px;
}

body {
  background-color: #f8f8f8;
  min-height: 100%;
  margin: 0;
  padding: 0;
}

h1,
h2 {
  margin-top: 0;
}

.info-address {
  font-size: 25px;
}

#thumb img {
  max-width:150px;
}

#sidebar .row {
  padding: 15px 0;
}

.price {
  font-style: italic;
}

.distance {
  font-style: italic;
  margin-top: -7px;
}

#ex1Slider {
  width: 100%;
  margin-bottom: 5px;
}

#ex1Slider .slider-selection {
  background: #BABABA;
}

#desc {
  max-width: 100%;
  padding-right: 25px;
}

